updated the swaggerhub specifications
